
import "PB_base_data.proto";

message PB_BagChange 
{
	optional PB_Item item = 1;
}

message PB_Bankruptcy
{
 	required int64 playerid = 1;	
}

message PB_NewEmail
{
	required PB_Email email = 1;
}

message PB_ResChange
{
	message PB_Res {
		optional string res = 1; 			// "coin", "diamond", "player_level"
		optional int32 add = 2;
		optional int32 cur_num = 3;
		optional int32 cur_exp = 4;
	}
	required string uid = 1;
	optional string reason = 2; 			// "player_level_up"
	repeated PB_Res res = 3;
}

message PB_PlayerVip
{
	optional int32 vip = 1;
	optional int32 exp = 2;
	optional bool  is_can_reward = 3;
}

message PB_Shutdown
{
	optional string desc = 1;
}

message PB_DrawDataUpdate
{
	repeated PB_DrawData datas = 1;
}

message PB_HallNotify 
{
	optional PB_BagChange 		bag_change 		= 1;	// 背包物品更新
	optional PB_Bankruptcy 		bk_notify 		= 2;	// 破产通知
	optional PB_NewEmail 		new_email 		= 3;	// 新邮件通知
	optional PB_ResChange 		res_modify 		= 4;	// 玩家资源属性下推
	optional PB_BuyGoods 		buy_notify  	= 5;	// 购买通知, 仅作客户端展示用
	optional PB_PlayerVip		player_vip 		= 6;	// 玩家vip信息改变
	optional PB_Shutdown		shutdown 		= 7;	// 客户端收到该通知后, 主动断开链接
	optional PB_VipBroadcast	vip_bc   		= 8;	// 系统广播
	optional PB_GoldBroadcast	gold_bc  		= 9;	// 系统广播
	optional PB_YuquanBroadcast	yuquan_bc   	= 10;	// 系统广播
	optional PB_ItemBroadcast	item_bc   		= 11;	// 系统广播
	optional PB_PhpBroadcast	php_bc   		= 12;	// 系统广播
	optional PB_DrawDataUpdate 	draw_notify 	= 13;	// 抽奖通知
};
